# amisc

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  _pre_commit_checks.py  gen_ref_pages.py  hello.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  release.py  sitemap.xml
.github/: SECURITY.md
.github/workflows/: build-docs.yml  deploy.yml  docs.yml  test.yml  tests.yml
CONTRIBUTING/: index.html
assets/: amisc_logo.pptx
changelog/: index.html
contributing/: index.html
coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_4cae40ae37d6de70___init___py.html  z_4cae40ae37d6de70_models_py.html  z_806a84536edbb98e___init___py.html  z_806a84536edbb98e_component_py.html  z_806a84536edbb98e_compression_py.html  z_806a84536edbb98e_distribution_py.html  z_806a84536edbb98e_interpolator_py.html  z_806a84536edbb98e_rv_py.html  z_806a84536edbb98e_serialize_py.html  z_806a84536edbb98e_system_py.html  z_806a84536edbb98e_training_py.html  z_806a84536edbb98e_transform_py.html  z_806a84536edbb98e_typing_py.html  z_806a84536edbb98e_utils_py.html  z_806a84536edbb98e_variable_py.html
docs/: CONTRIBUTING.md  README.md  TODOC.md  abbreviations.md  examples.md  gen_ref_pages.py  how-to-guides.md  reference.md  tutorial.ipynb  tutorials.md
docs/assets/: amisc_logo.pptx
docs/css/: extra.css
docs/guides/: config_file.md  extend.md  interface_models.md  train_surrogate.md  variables.md
docs/javascript/: mathjax.js
docs/javascripts/: mathjax.js
docs/reference/: components.md  interpolators.md  overview.md  system.md  utilities.md  variables.md
docs/styles/: extra.css
docs/theory/: feedback_cycles.md  overview.md  polynomials.md
examples/: index.html
guides/config_file/: index.html
guides/extend/: index.html
guides/interface_models/: index.html
guides/train_surrogate/: index.html
guides/variables/: index.html
how-to-guides/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/component/: index.html
reference/components/: index.html
reference/compression/: index.html
reference/distribution/: index.html
reference/interpolator/: index.html
reference/interpolators/: index.html
reference/overview/: index.html
reference/rv/: index.html
reference/serialize/: index.html
reference/system/: index.html
reference/training/: index.html
reference/transform/: index.html
reference/typing/: index.html
reference/utilities/: index.html
reference/utils/: index.html
reference/variable/: index.html
reference/variables/: index.html
search/: search_index.json
src/amisc/: __init__.py  component.py  compress.py  compression.py  distribution.py  interpolator.py  rv.py  serialize.py  system.py  training.py  transform.py  tutorial.py  typing.py  utils.py  variable.py
src/amisc/examples/: __init__.py  fire-sat.yml  models.py  tutorial.py
start/: index.html
tests/: __init__.py  borehole.yml  conftest.py  profile_fit.py  profile_predict.py  test_component.py  test_component_spec.py  test_convergence.py  test_interpolator.py  test_loading.py  test_package.py  test_rv.py  test_serialize.py  test_system.py  test_system_spec.py  test_training_data.py  test_utils.py  test_variable.py  wing.yml
theory/: index.html
theory/feedback_cycles/: index.html
theory/overview/: index.html
theory/polynomials/: index.html
tutorial/: index.html  tutorial.ipynb
tutorials/: index.html
