[project]
name = "amisc"
dynamic = ["version"]
description = "Adaptive multi-index stochastic collocation (surrogates) for metamodeling of multidisciplinary systems"
authors = [
    {name = "Joshua Eckels", email = "eckelsjd@umich.edu"},
]
dependencies = [
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    "networkx>=3.2.1",
    "dill>=0.3.7",
    "scipy>=1.11.4",
    "matplotlib>=3.8.2",
    "uqtils>=0.1.0",
]
requires-python = ">=3.11"
readme = "docs/README.md"
license = {file = "LICENSE"}
keywords = ["surrogates", "multidisciplinary", "multifidelity", "adaptive", "collocation", "metamodeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research"
]

[project.urls]
Repository = "https://github.com/eckelsjd/amisc.git"
Documentation = "https://eckelsjd.github.io/amisc"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pylint.MASTER]
ignore-paths = [ "^.venv/.*$", "^docs/*" ]

[tool.pylint."MESSAGES CONTROL"]
disable = '''
missing-module-docstring,
missing-class-docstring,
missing-function-docstring
'''

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.pdm.version]
source = "file"
path = "src/amisc/__init__.py"

[tool.pdm.scripts]
release = "python release.py"
test = "pytest --cov=amisc tests"
docs = "mkdocs serve"

[tool.pdm.dev-dependencies]
dev = [
    "pylint>=3.0.2",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "mkdocs>=1.5.3",
    "GitPython>=3.1.40",
    "mkdocs-material>=9.5.5",
    "mkdocstrings[python]>=0.24.0",
]
